--- a/src/app/section-reseau/section-reseau.component.html
+++ b/src/app/section-reseau/section-reseau.component.html
@@ -1,1 +1,3 @@
-<p>section-reseau works!</p>
+<div class="reseau">
+  <fa-icon class="icon" *ngFor="let item of icons" [icon]="item.name"></fa-icon>
+</div>
